--- a/src/app/designer/designer.component.scss
+++ b/src/app/designer/designer.component.scss
@@ -28,6 +28,8 @@
 
   .center {
     grid-area: main;
+    min-width: 0;
+    min-height: 0;
   }
 
   .bottom {
